--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,7 @@
 
     <application
         android:label="@string/app_title"
+        android:icon="@mipmap/ic_launcher"
         android:persistent="true"
         android:defaultToDeviceProtectedStorage="true"
         android:directBootAware="true"
@@ -62,9 +63,14 @@
         <!-- GameBar Overlay -->
         <activity
             android:name=".GameBarSettingsActivity"
-            android:label="@string/game_bar_title"
+            android:label="@string/app_title"
+            android:icon="@mipmap/ic_launcher"
             android:theme="@style/Theme.SubSettingsBase.Expressive"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
