GameBar: Implement overlay font customisations (wip)
Signed-off-by: kenway214 <kenway214@outlook.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -140,6 +140,11 @@
         android:exported="false"
         android:theme="@style/Theme.SubSettingsBase.Expressive" />
 
+    <activity
+        android:name=".GameBarFontSelectorActivity"
+        android:exported="false"
+        android:theme="@style/Theme.SubSettingsBase.Expressive" />
+
 <!-- FileProvider for sharing log files -->
     <provider
         android:name="androidx.core.content.FileProvider"
